# pynfc_nfx

./: README.md  polling.c  setup.py
cffi test/: __init__.py  data  pynfc_nfx.py  setup.py  test  test.c  test.h  test2  test2.c
cffi test/__pycache__/: _cffi__x13a4ab6ex5efc6ce1.c  _cffi__x1d30af05xf01b4610.c  _cffi__x2c2ae3bfxf5810537.c  _cffi__x38892b79x51365cba.c  _cffi__x441fa55cx22a18488.c  _cffi__x46ab8979xa3e5acf4.c  _cffi__x48e457d8x7048e165.c  _cffi__x4d8d8e08x2036597c.c  _cffi__x4d8d8e08x3401d155.c  _cffi__x51646ad1x9f39153b.c  _cffi__x526224c3x86e75008.c  _cffi__x6e854336x74b2e942.c  _cffi__x7143a387x86e75008.c  _cffi__x731e18e3xf50fcd79.c  _cffi__x743b0637x96fb07d3.c  _cffi__x77ffdf72xc3efe065.c  _cffi__x7ceaa38bxacacda2d.c  _cffi__x9041f2bx45ea0ecc.c  _cffi__x970b23c8x402f20ed.c  _cffi__xafdf2658x473fdfd1.c  _cffi__xafdf2658x6c6b88a6.c  _cffi__xb60922c4xb2fac8b6.c  _cffi__xba7b22fex35d268f8.c  _cffi__xc3198c21x85c056b4.c  _cffi__xc3198c21xf4d6adfd.c  _cffi__xd0204f13xaa18a49a.c  _cffi__xd52cd3eax2b8a27ce.c  _cffi__xdade0ae1x2a872ca6.c  _cffi__xdb030e4ex88d30087.c  _cffi__xdc6aca6bxbb75316e.c  _cffi__xddee9f6fxde6db2c6.c  _cffi__xde93e4a2x5261641e.c  _cffi__xe2123398x75e6fd85.c  _cffi__xe45700c5xaccac2bb.c  _cffi__xe45700c5xf1a0deed.c  _cffi__xe60102b2xf970778f.c  _cffi__xea4af2e8x19002997.c  _cffi__xec95bcf7xfd1aa081.c  _cffi__xfbfc1560x32b76f90.c  _cffi__xfd4c7e68x3be8acfc.c  (+3 more)
cffi test/tester.egg-info/: PKG-INFO  SOURCES.txt
ctype test/: pynfc_nfx.py  setup.py
ctype test/nxppy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ctype test/pynfc_nfx/: __init__.py  __init__.py~  blank_module.py~  module_path.py~  pynfc_nfx.py
pynfc_nfx/: __init__.py  blank_module.py  geany_run_script.bat  pynfc_nfx.py
pynfc_nfx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pynfc_nfx/c_src/: CMakeLists.txt  CMakeLists.txt~
pynfc_nfx/c_src/NxpRdLib_PublicRelease/: CMakeLists.txt  polling.c
pynfc_nfx/c_src/test/: CMakeLists.txt  test.c
pynfc_nfx/cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~
test/: setup.py
test/test/: pynfc_nfx.py  test.c
